fixed the layout issues, added styling

--- a/style.css
+++ b/style.css
@@ -1,111 +1,96 @@
 p {
-    font-size: 1.2rem;
+	font-size: 1.2rem;
+}
+section {
+	padding-top: 8rem;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+h1 {
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	color: #f1f1f1;
+}
+.col-centered {
+	margin: 0 auto;
 }
 body {
-    background: #111;
-    color: #fafafa;
-}
-nav {
-    background: #fafafa;
+	background: #14161D;
+	color: #939089;
 }
 .menu-hamburger {
-    bottom: calc(50% - 10px);
-    right: 8px;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+	bottom: calc(50% - 10px);
+	right: 0;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
 }
 @media (max-width: 575.98px) {
-    .menu-hamburger {
-        bottom: calc(50% - 23px);
-   }
+	.menu-hamburger {
+		bottom: calc(50% - 12px);
+	}
 }
 .menu-hamburger span {
-    width: 30px;
-    height: 4px;
-    display: block;
-    background: #3d5d6f;
-    margin-bottom: 4px;
-}
-
-.menu-hamburger span:nth-child(2) {
-    background-color: #d60e96;
+	width: 30px;
+	height: 4px;
+	display: block;
+	background: #fafafa;
+	margin-bottom: 4px;
 }
 .menu-hamburger span:last-of-type {
-    margin-bottom: 0;
+	margin-bottom: 0;
 }
-
 nav {
-    transition: background 0.2s ease-in-out;
-}
-nav.h-navbar {
-    max-height: 110px;
-}
-@media (max-width: 767.98px) {
-    nav.h-navbar {
-        max-height: 90px;
-   }
-}
-@media (max-width: 575.98px) {
-    nav.h-navbar {
-        max-height: 70px;
-   }
-}
-.is-hidden {
-    opacity: 0;
-    transition: transform 0.4s, opacity 0.2s;
-}
-.is-visible {
-    opacity: 1;
-    -webkit-transition: background .2s ease-in-out,color .2s,opacity .1s;
-    -moz-transition: background .2s ease-in-out,color .2s,opacity .1s;
-    -ms-transition: background .2s ease-in-out,color .2s,opacity .1s;
-    -o-transition: background .2s ease-in-out,color .2s,opacity .1s;
-    transition: background .2s ease-in-out,color .2s,opacity .1s;
+	transition: background 0.4s ease-in-out;
+	background: #010101;
 }
 nav .navbar-header img {
-    max-width: 110px;
+	max-width: 110px;
 }
 @media (max-width: 767.98px) {
-    nav .navbar-header img {
-        max-width: 90px;
-   }
+	nav.h-navbar {
+		max-height: 90px;
+	}
+	nav .navbar-header img {
+		max-width: 90px;
+	}
 }
 @media (max-width: 575.98px) {
-    nav .navbar-header img {
-        max-width: 70px;
-   }
+	nav.h-navbar {
+		max-height: 70px;
+	}
+	nav .navbar-header img {
+		max-width: 70px;
+	}
+}
+.is-hidden {
+	opacity: 0;
+	transition: transform 0.4s, opacity 0.2s;
 }
 nav .navbar-nav li.navbar-item {
-    line-height: 110px;
-    margin-left: -5px;
+	line-height: 110px;
+	margin-left: -5px;
 }
 nav .navbar-nav li.navbar-item a {
-    padding: 0 20px;
+	padding: 0 20px;
 }
 @media (max-width: 991.98px) {
-    nav .navbar-nav li.navbar-item a {
-        padding: 0 10px;
-   }
+	nav .navbar-nav li.navbar-item a {
+		padding: 0 10px;
+    }
+    .row {
+        width: 100%;
+    }
 }
 nav .navbar-nav li ul li a p {
-    line-height: 1.4;
+	line-height: 1.4;
 }
-nav .navbar-nav li:hover .dropdown {
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-}
-
 .fixed-top {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 1030;
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 1030;
 }
-
 .navbar-hide {
-    pointer-events: none;
-    opacity: 0;
+	pointer-events: none;
+	opacity: 0;
 }
